set up sequelize

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "mg:seed": "node seeds/mongoose",
     "console": "node repl.js",
     "c": "node repl.js",
-    "sql": "./node_modules/sequelize-cli/bin/sequelize"
+    "sql": "node_modules/sequelize-cli/bin/sequelize"
   },
   "repository": {
     "type": "git",
