--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Viking eCommerce store for Thunder Gods that like to buy \"Antique Wooden Pizzas\"",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "sql:migrate:undo": "npm run sql db:migrate:undo:all",
     "sql:migrate": "npm run sql db:migrate",
@@ -32,9 +32,11 @@
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.1",
     "express": "^4.15.2",
+    "express-flash-messages": "^0.1.1",
     "express-handlebars": "^3.0.0",
     "faker": "^4.1.0",
     "mongoose": "^4.9.5",
+    "morgan": "^1.8.1",
     "path": "^0.12.7",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
