--- a/package.json
+++ b/package.json
@@ -9,11 +9,8 @@
     "sql:migrate": "npm run sql db:migrate",
     "sql:seed:undo": "npm run sql db:seed:undo:all",
     "sql:seed": "npm run sql db:seed:all",
-
     "sql:s": "npm run sql:migrate:undo && npm run sql:migrate && npm run sql:seed",
-
     "mg:seed": "node seeds/mongoose",
-
     "console": "node repl.js",
     "c": "node repl.js",
     "sql": "./node_modules/sequelize-cli/bin/sequelize"
@@ -32,6 +29,7 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "cookie-session": "^2.0.0-beta.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "express-flash-messages": "^0.1.1",
     "express-handlebars": "^3.0.0",
@@ -41,6 +39,7 @@
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.30.4",
-    "sequelize-cli": "^2.7.0"
+    "sequelize-cli": "^2.7.0",
+    "stripe": "^4.18.0"
   }
 }
