--- a/package.json
+++ b/package.json
@@ -31,16 +31,19 @@
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "express-flash-messages": "^0.1.1",
     "express-handlebars": "^3.0.0",
     "faker": "^4.1.0",
+    "json-safe-parse": "0.0.2",
     "mongoose": "^4.9.5",
     "morgan": "^1.8.1",
     "path": "^0.12.7",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.30.4",
-    "sequelize-cli": "^2.7.0"
+    "sequelize-cli": "^2.7.0",
+    "sync-request": "^4.0.2"
   }
 }
