--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.30.4",
     "sequelize-cli": "^2.7.0",
+    "stripe": "^4.18.0",
     "sync-request": "^4.0.2"
   }
 }
