--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "express-flash-messages": "^0.1.1",
     "express-handlebars": "^3.0.0",
     "faker": "^4.1.0",
+    "moment": "^2.18.1",
     "mongoose": "^4.9.5",
     "morgan": "^1.8.1",
+    "numeral": "^2.0.6",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.30.4",
