--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Viking eCommerce store for Thunder Gods that like to buy \"Antique Wooden Pizzas\"",
   "main": "index.js",
   "engines": {
-    "node:" ">= 7.6.0"
+    "node": ">= 7.6.0"
   },
   "scripts": {
     "start": "node app.js",
