--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "sequelize": "^3.30.4",
     "sequelize-cli": "^2.7.0",
     "stripe": "^4.18.0"
+  },
+  "engines": {
+    "node": ">= 7.6.0"
   }
 }
