--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sequelize": "^3.30.4",
     "sequelize-cli": "^2.7.0",
     "shortid": "^2.2.8",
-    "stripe": "^4.18.0"
+    "stripe": "^4.18.0",
+    "validator": "^7.0.0"
   }
 }
