--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/christianflorez/project_mimirs_market#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.2",
     "express": "^4.15.3",
     "express-flash-messages": "^0.1.1",
