--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "pg": "^6.2.4",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.30.4",
-    "sequelize-cli": "^2.7.0"
+    "sequelize-cli": "^2.7.0",
+    "stripe": "^4.22.0"
   },
   "devDependencies": {
     "browser-sync": "^2.18.12",
