--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "pg-hstore": "^2.3.2",
     "redis": "^2.7.1",
     "sequelize": "^4.1.0",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "stripe": "^4.22.0",
+    "us": "^2.0.0"
   }
 }
