--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
     "express-flash-messages": "^0.1.1",
-    "express-hbs": "^1.0.4",
+    "express-handlebars": "^3.0.0",
     "express-session": "^1.15.3",
     "express-sessions": "^1.0.6",
     "faker": "^4.1.0",
