--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.30.4",
     "sequelize-cli": "^2.7.0",
-    "stripe": "^4.22.0"
+    "stripe": "^4.22.0",
+    "faker": "^4.1.0"
   },
   "devDependencies": {
     "browser-sync": "^2.18.12",
-    "faker": "^4.1.0",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1"
   },
