models and migrations

--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   },
   "homepage": "https://github.com/Avonyel/project_mimirs_market#readme",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "express-handlebars": "^3.0.0",
     "express-method-override-get-post-support": "0.0.7",
     "express-session": "^1.15.5",
     "method-override": "^2.3.9",
+    "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13",
     "mongoose": "^4.11.6",
     "pg": "^7.1.0",
     "pg-hstore": "^2.3.2",
