--- a/package.json
+++ b/package.json
@@ -4,7 +4,17 @@
   "description": "A Viking eCommerce store for Thunder Gods that like to buy \"Antique Wooden Pizzas\"",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js",
+    "sql:migrate:undo": "npm run sql db:migrate:undo:all",
+    "sql:migrate": "npm run sql db:migrate",
+    "sql:seed:undo": "npm run sql db:seed:undo:all",
+    "sql:seed": "npm run sql db:seed:all",
+    "sql:s": "npm run sql:migrate:undo && npm run sql:migrate && npm run sql:seed",
+    "mg:seed": "node seeds/mongoose",
+    "console": "node repl.js",
+    "c": "node repl.js",
+    "sql": "./node_modules/sequelize-cli/bin/sequelize"
   },
   "repository": {
     "type": "git",
