--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An e-commerce app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sql-seed": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all"
   },
   "repository": {
     "type": "git",
@@ -19,10 +20,12 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
+    "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "express-handlebars": "^3.0.0",
     "express-method-override-get-post-support": "0.0.7",
     "express-session": "^1.15.5",
+    "faker": "^4.1.0",
     "method-override": "^2.3.9",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
