--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Viking eCommerce store for Thunder Gods that like to buy \"Antique Wooden Pizzas\"",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,19 @@
   "bugs": {
     "url": "https://github.com/KaraThrash/project_mimirs_market/issues"
   },
-  "homepage": "https://github.com/KaraThrash/project_mimirs_market#readme"
+  "homepage": "https://github.com/KaraThrash/project_mimirs_market#readme",
+  "dependencies": {
+    "bluebird": "^3.5.0",
+    "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^1.3.0",
+    "express": "^4.15.4",
+    "express-handlebars": "^3.0.0",
+    "mongoose": "^4.11.6",
+    "mongooseeder": "^2.0.5",
+    "pg": "^6.4.1",
+    "pg-hstore": "^2.3.2",
+    "repl": "^0.1.3",
+    "sequelize": "^4.4.2"
+  }
 }
