added api routes

--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-	"name": "project-mimirs-market",
-	"version": "0.0.0",
-	"private": true,
-	"scripts": {
-		"sql:seed": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all",
-		"start": "which nodemon > /dev/null && nodemon ./bin/www || node ./bin/www",
-		"sql:migrate:undo": "npm run sql db:migrate:undo:all",
-		"sql:migrate": "npm run sql db:migrate",
-		"sql:seed:undo": "npm run sql db:seed:undo:all",
-		"sql:s": "npm run sql:migrate:undo && npm run sql:migrate && npm run sql:seed",
-		"mg:seed": "node seeds/mongoose",
-		"console": "node repl.js",
-		"c": "node repl.js",
-		"sql": "./node_modules/sequelize-cli/bin/sequelize"
-	},
-	"dependencies": {
-		"bluebird": "^3.5.0",
-		"body-parser": "~1.17.1",
-		"cookie-parser": "~1.4.3",
-		"debug": "~2.6.3",
-		"dotenv": "^4.0.0",
-		"express": "~4.15.2",
-		"express-handlebars": "^3.0.0",
-		"express-mongoose-generator-es6": "^3.0.0",
-		"express-session": "^1.15.5",
-		"hg": "^0.2.0",
-		"mongoose": "^4.11.6",
-		"morgan": "^1.8.2",
-		"pg": "^7.1.0",
-		"sequelize": "^4.4.2",
-		"sequelize-cli": "^2.8.0",
-		"serve-favicon": "~2.4.2",
-		"shortid": "^2.2.8"
-	}
+  "name": "project-mimirs-market",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "sql:seed": "sequelize --config config/sequelize.js db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all",
+    "start": "which nodemon > /dev/null && nodemon ./bin/www || node ./bin/www",
+    "sql:migrate:undo": "npm run sql db:migrate:undo:all",
+    "sql:migrate": "npm run sql db:migrate",
+    "sql:seed:undo": "npm run sql db:seed:undo:all",
+    "sql:s": "npm run sql:migrate:undo && npm run sql:migrate && npm run sql:seed",
+    "mg:seed": "node seeds/mongoose",
+    "console": "node repl.js",
+    "c": "node repl.js",
+    "sql": "./node_modules/sequelize-cli/bin/sequelize"
+  },
+  "dependencies": {
+    "bluebird": "^3.5.0",
+    "body-parser": "~1.17.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.3",
+    "dotenv": "^4.0.0",
+    "express": "~4.15.2",
+    "express-handlebars": "^3.0.0",
+    "express-mongoose-generator-es6": "^3.0.0",
+    "express-session": "^1.15.5",
+    "hg": "^0.2.0",
+    "mongoose": "^4.11.6",
+    "morgan": "^1.8.2",
+    "pg": "^7.1.0",
+    "sequelize": "^4.4.2",
+    "sequelize-cli": "^2.8.0",
+    "serve-favicon": "~2.4.2",
+    "shortid": "^2.2.8"
+  }
 }
