wo bist sequelize

--- a/config/config.json
+++ b/config/config.json
@@ -1,13 +1,13 @@
 {
   "development": {
-    "username": "postgres",
+    "username": "highdefinition",
     "password": "password",
     "database": "database_mimirs_market_development",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "username": "postgres",
+    "username": "highdefinition",
     "password": "password",
     "database": "database_mimirs_market_test",
     "host": "127.0.0.1",
