--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "sql:seed:undo": "npm run sql db:seed:undo:all",
     "sql:seed": "npm run sql db:seed:all",
     "sql:reseed": "npm run sql:seed:undo && npm run sql:seed",
-    "sql:s": "npm run sql:migrate:undo && npm run sql:migrate && npm run sql:seed",
+    "sql:reset": "npm run sql:migrate:undo && npm run sql:migrate && npm run sql:seed",
     "mg:seed": "node seeds/mongoose",
     "console": "node repl.js",
     "c": "node repl.js",
