--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "seed": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "pg": "^6.4.1",
     "pg-hstore": "^2.3.2",
     "repl": "^0.1.3",
-    "sequelize": "^4.4.2"
+    "sequelize": "^4.4.2",
+    "sequelize-cli": "^2.8.0"
   }
 }
