--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
-    "seed": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all"
+    "seed": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all",
+    "c": "node repl.js"
   },
   "repository": {
     "type": "git",
