--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "cookie-session": "^1.3.0",
     "express": "^4.15.4",
     "express-handlebars": "^3.0.0",
+    "faker": "^4.1.0",
     "mongoose": "^4.11.6",
     "mongooseeder": "^2.0.5",
     "pg": "^6.4.1",
     "pg-hstore": "^2.3.2",
+    "random-image-url": "^1.0.1",
     "repl": "^0.1.3",
     "sequelize": "^4.4.2",
     "sequelize-cli": "^2.8.0"
