--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.15.4",
     "express-handlebars": "^3.0.0",
     "faker": "^4.1.0",
+    "lodash": "^4.17.4",
     "mongoose": "^4.11.6",
     "mongooseeder": "^2.0.5",
     "pg": "^6.4.1",
