--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "cookie-session": "^1.3.0",
     "express": "^4.15.4",
     "express-handlebars": "^3.0.0",
+    "express-method-override-get-post-support": "0.0.7",
     "faker": "^4.1.0",
     "lodash": "^4.17.4",
+    "method-override": "^2.3.9",
     "mongoose": "^4.11.6",
     "mongooseeder": "^2.0.5",
     "pg": "^6.4.1",
