--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sql-seed": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all",
-    "seed": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all",
-    "sql": "node_modules/sequelize-cli/bin/sequelize"
+    "sql-seed": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all"
   },
   "repository": {
     "type": "git",
