--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pg": "^7.1.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.4.2",
-    "sequelize-cli": "^2.8.0"
+    "sequelize-cli": "^2.8.0",
+    "stripe": "^4.24.0"
   }
 }
