--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
-    "cookie-session": "^1.3.0",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "express-flash-messages": "^0.1.1",
     "express-handlebars": "^3.0.0",
     "express-method-override-get-post-support": "0.0.7",
+    "express-session": "^1.15.5",
     "faker": "^4.1.0",
     "handlebars": "^4.0.10",
     "load-helpers": "^1.0.1",
