--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
 		"express-session": "^1.15.5",
 		"faker": "^4.1.0",
 		"hg": "^0.2.0",
+		"method-override": "^2.3.9",
 		"mongoose": "^4.11.6",
 		"morgan": "^1.8.2",
 		"pg": "^7.1.0",
 		"sequelize": "^4.4.2",
 		"sequelize-cli": "^2.8.0",
 		"serve-favicon": "~2.4.2",
-		"shortid": "^2.2.8"
+		"shortid": "^2.2.8",
+		"stripe": "^4.24.0"
 	}
 }
