--- a/package.json
+++ b/package.json
@@ -1,37 +1,41 @@
 {
-  "name": "project_mimirs_market",
+  "name": "assignment_mmarket",
   "version": "1.0.0",
-  "description": "A Viking eCommerce store for Thunder Gods that like to buy \"Antique Wooden Pizzas\"",
+  "description": "marketmarketmarket",
   "main": "app.js",
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "cookie-session": "^1.3.0",
+    "express": "^4.15.4",
+    "express-flash-messages": "^0.1.1",
+    "express-handlebars": "^3.0.0",
+    "express-method-override-get-post-support": "0.0.7",
+    "load-helpers": "^1.0.1",
+    "method-override": "^2.3.9",
+    "morgan": "^1.8.2",
+    "morgan-toolkit": "^1.0.2",
+    "pg": "6.4.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.4.2",
+    "sequelize-cli": "^2.8.0",
+    "stripe": "^4.24.0"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
-    "seed": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all",
-    "c": "node repl.js"
+    "start": "which nodemon > /dev/null && nodemon app.js || node app.js",
+    "sql": "node_modules/sequelize-cli/bin/sequelize",
+    "seed": "npm run sql db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all",
+    "console": "node repl.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/KaraThrash/project_mimirs_market.git"
+    "url": "git+https://github.com/thebopshoobop/assignment_okodin.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/KaraThrash/project_mimirs_market/issues"
+    "url": "https://github.com/thebopshoobop/assignment_okodin/issues"
   },
-  "homepage": "https://github.com/KaraThrash/project_mimirs_market#readme",
-  "dependencies": {
-    "bluebird": "^3.5.0",
-    "body-parser": "^1.17.2",
-    "cookie-parser": "^1.4.3",
-    "cookie-session": "^1.3.0",
-    "express": "^4.15.4",
-    "express-handlebars": "^3.0.0",
-    "mongoose": "^4.11.6",
-    "mongooseeder": "^2.0.5",
-    "pg": "^6.4.1",
-    "pg-hstore": "^2.3.2",
-    "repl": "^0.1.3",
-    "sequelize": "^4.4.2",
-    "sequelize-cli": "^2.8.0"
-  }
+  "homepage": "https://github.com/thebopshoobop/assignment_okodin#readme"
 }
