--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^1.3.0",
+    "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "express-handlebars": "^3.0.0",
     "express-method-override-get-post-support": "0.0.7",
@@ -37,6 +38,7 @@
     "random-image-url": "^1.0.1",
     "repl": "^0.1.3",
     "sequelize": "^4.4.2",
-    "sequelize-cli": "^2.8.0"
+    "sequelize-cli": "^2.8.0",
+    "stripe": "^4.24.0"
   }
 }
