--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "project_mimirs_market",
   "version": "1.0.0",
-  "description":
-    "A Viking eCommerce store for Thunder Gods that like to buy \"Antique Wooden Pizzas\"",
+  "description": "A Viking eCommerce store for Thunder Gods that like to buy \"Antique Wooden Pizzas\"",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,8 +10,7 @@
     "sql:migrate": "npm run sql db:migrate",
     "sql:seed:undo": "npm run sql db:seed:undo:all",
     "sql:seed": "npm run sql db:seed:all",
-    "sql:s":
-      "npm run sql:migrate:undo && npm run sql:migrate && npm run sql:seed",
+    "sql:s": "npm run sql:migrate:undo && npm run sql:migrate && npm run sql:seed",
     "mg:seed": "node seeds/mongoose",
     "console": "node repl.js",
     "c": "node repl.js",
@@ -32,6 +30,7 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.18.2",
     "cookie-session": "^1.3.2",
+    "dotenv": "^4.0.0",
     "express": "^4.16.0",
     "express-handlebars": "^3.0.0",
     "faker": "^4.1.0",
@@ -42,6 +41,7 @@
     "pg-hstore": "^2.3.2",
     "repl": "^0.1.3",
     "sequelize": "^4.11.3",
-    "sequelize-cli": "^3.0.0"
+    "sequelize-cli": "^3.0.0",
+    "stripe": "^5.1.0"
   }
 }
