--- a/package.json
+++ b/package.json
@@ -4,8 +4,15 @@
 	"description": "A Viking eCommerce store for Thunder Gods that like to buy \"Antique Wooden Pizzas\"",
 	"main": "index.js",
 	"dependencies": {
+		"cookie-session": "^2.0.0-beta.3",
+		"express": "^4.16.2",
+		"express-handlebars": "^3.0.0",
+		"express-method-override-get-post-support": "^1.0.0",
 		"faker": "^4.1.0",
+		"method-override": "^2.3.10",
 		"mongoose": "^4.13.2",
+		"morgan": "^1.9.0",
+		"morgan-toolkit": "^1.0.2",
 		"pg": "^7.4.0",
 		"pg-hstore": "^2.3.2",
 		"sequelize": "^4.22.6",
