--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"express-handlebars": "^3.0.0",
 		"express-method-override-get-post-support": "^1.0.0",
 		"faker": "^4.1.0",
+		"lodash": "^4.17.4",
 		"method-override": "^2.3.10",
 		"mongoose": "^4.13.2",
 		"morgan": "^1.9.0",
