--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "index.js",
 	"dependencies": {
 		"cookie-session": "^2.0.0-beta.3",
+		"dotenv": "^4.0.0",
 		"express": "^4.16.2",
 		"express-handlebars": "^3.0.0",
 		"express-method-override-get-post-support": "^1.0.0",
@@ -17,7 +18,8 @@
 		"pg": "^7.4.0",
 		"pg-hstore": "^2.3.2",
 		"sequelize": "^4.22.6",
-		"sequelize-cli": "^3.0.0"
+		"sequelize-cli": "^3.0.0",
+		"stripe": "^5.3.0"
 	},
 	"devDependencies": {},
 	"scripts": {
