--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"lodash": "^4.17.4",
 		"method-override": "^2.3.10",
 		"mongoose": "^4.13.2",
+		"mongooseeder": "^2.0.5",
 		"morgan": "^1.9.0",
 		"morgan-toolkit": "^1.0.2",
 		"pg": "^7.4.0",
