--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "console": "node repl.js",
     "c": "node repl.js",
     "start": "node app.js",
+    "seed": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all",
     "sql": "./node_modules/sequelize-cli/bin/sequelize"
   },
   "repository": {
