--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "pg": "^7.4.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.23.4",
-    "sequelize-cli": "^3.1.0"
+    "sequelize-cli": "^3.1.0",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4"
   }
 }
