--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "mg:seed": "node seeds/mongoose",
     "console": "node repl.js",
     "c": "node repl.js",
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "seed": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all",
     "sql": "./node_modules/sequelize-cli/bin/sequelize"
   },
