--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-flash-messages": "^0.1.1",
     "express-handlebars": "^3.0.0",
@@ -50,6 +51,7 @@
     "sequelize": "^4.23.4",
     "sequelize-cli": "^3.1.0",
     "socket.io": "^2.0.4",
-    "socket.io-client": "^2.0.4"
+    "socket.io-client": "^2.0.4",
+    "stripe": "^5.3.0"
   }
 }
