--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "cookie-session": "^2.0.0-beta.3",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-flash-messages": "^0.1.1",
     "express-handlebars": "^3.0.0",
