--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "sequelize-cli": "^3.2.0"
   },
   "devDependencies": {
+    "eslint": "^4.12.1",
     "eslint-config-google": "^0.9.1"
   }
 }
