--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mg:seed": "node seeds/mongoose",
     "console": "node repl.js",
     "c": "node repl.js",
-    "sql": "./node_modules/sequelize-cli/bin/sequelize"
+    "sql": "./node_modules/sequelize-cli/bin/sequelize",
+    "seed": "sequelize db:migrate:undo:all && sequelize db:migrate && sequelize db:seed:all"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
