--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "load-helpers": "^1.0.1",
     "lodash": "^4.17.4",
     "method-override": "^2.3.10",
+    "moment": "^2.19.3",
     "mongoose": "^4.13.6",
     "morgan": "^1.9.0",
     "morgan-toolkit": "^1.0.2",
