--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "debug": "~2.6.9",
     "dotenv": "^4.0.0",
     "express": "^4.15.5",
+    "express-session": "^1.15.6",
     "hbs": "~4.0.1",
     "mongoose": "^4.13.6",
     "morgan": "~1.9.0",
