--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "pg": "^6.4.2",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.27.0",
-    "sequelize-cli": "^3.2.0"
+    "sequelize-cli": "^3.2.0",
+    "stripe": "^5.4.0"
   },
   "devDependencies": {
     "eslint": "^4.12.1",
