--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "project_mimirs_market",
   "version": "1.0.0",
-  "description": "A Viking eCommerce store for Thunder Gods that like to buy \"Antique Wooden Pizzas\"",
+  "description":
+    "A Viking eCommerce store for Thunder Gods that like to buy \"Antique Wooden Pizzas\"",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,11 +10,12 @@
     "sql:migrate": "npm run sql db:migrate",
     "sql:seed:undo": "npm run sql db:seed:undo:all",
     "sql:seed": "npm run sql db:seed:all",
-    "sql:s": "npm run sql:migrate:undo && npm run sql:migrate && npm run sql:seed",
+    "sql:s":
+      "npm run sql:migrate:undo && npm run sql:migrate && npm run sql:seed",
     "mg:seed": "node seeds/mongoose",
     "console": "node repl.js",
     "c": "node repl.js",
-    "sql": "./node_modules/sequelize-cli/bin/sequelize",
+    "sql": "node_modules/.bin/sequelize",
     "start": "which nodemon > /dev/null && nodemon app.js || node app.js"
   },
   "repository": {
