--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "project_mimirs_market",
   "version": "1.0.0",
-  "description":
-    "A Viking eCommerce store for Thunder Gods that like to buy \"Antique Wooden Pizzas\"",
+  "description": "A Viking eCommerce store for Thunder Gods that like to buy \"Antique Wooden Pizzas\"",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,8 +9,7 @@
     "sql:migrate": "npm run sql db:migrate",
     "sql:seed:undo": "npm run sql db:seed:undo:all",
     "sql:seed": "npm run sql db:seed:all",
-    "sql:s":
-      "npm run sql:migrate:undo && npm run sql:migrate && npm run sql:seed",
+    "sql:s": "npm run sql:migrate:undo && npm run sql:migrate && npm run sql:seed",
     "mg:seed": "node seeds/mongoose",
     "console": "node repl.js",
     "c": "node repl.js",
@@ -33,6 +31,7 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-flash-messages": "^0.1.1",
     "express-handlebars": "^3.0.0",
@@ -44,6 +43,7 @@
     "pg": "^6.4.2",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.28.5",
-    "sequelize-cli": "^3.2.0"
+    "sequelize-cli": "^3.2.0",
+    "stripe": "^5.4.0"
   }
 }
