--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"cookie-session": "^2.0.0-beta.3",
 		"dotenv": "^4.0.0",
 		"express": "^4.16.2",
+		"express-flash-messages": "^0.1.1",
 		"express-handlebars": "^3.0.0",
 		"express-method-override-get-post-support": "^1.0.1",
 		"faker": "^4.1.0",
